# rambock

./: .clang-format  .gitignore  CMakeLists.txt  README.md  external_ptr.hpp  local_copy.hpp  memory_allocator.hpp  memory_device.hpp  memory_layer.hpp  rambock_common.hpp  vcpkg.json
.github/workflows/: cmake.yml
allocators/: base_allocator.hpp  bump_allocator.hpp  simple_allocator.hpp  template_allocator.hpp
benchmarks/: benchmark_cached_access.cpp
drivers/: driver_23LC1024.hpp
examples/: simple_usage.cpp
helpers/: template_allocator.hpp
layers/: access_counter.cpp  access_counter.hpp  access_debug_printer.hpp  base_layer.cpp  base_layer.hpp  cache_layer.hpp
mocks/: mock_memory_device.hpp  mock_slow_layer.hpp
test/: test_access_counter.cpp  test_cache_layer.cpp  test_core.cpp  test_external_ptr.cpp  test_simple_allocator.cpp
tools/: virtual_memory_calculator.py
